src/pacotememe/gramaticameme.java
/* gramaticameme.java */
/* Generated By:JavaCC: Do not edit this line. gramaticameme.java */
package pacotememe;

import java.util.regex.Matcher;
import java.util.regex.Pattern;
import java.util.ArrayList;
import java.util.List;
import java.util.Set;
import java.util.HashSet;

public class gramaticameme implements gramaticamemeConstants {
  public static List<String> listaErros = new ArrayList<String>();
  public static List<Integer> listaLinhasErros = new ArrayList<Integer>();

  public static boolean isOperand(int kind) {
      return kind == ID ||
             kind == NUMERO ||
             kind == NUMERO_FLOAT ||
             kind == STRING ||
             kind == T_TOP ||
             kind == T_TROLL;
  }

  public static boolean isMissingOperator(ParseException e) {
      Token current = e.currentToken;
      if (current == null) return false;
      Token proximo = current.next;
      if (proximo == null) return false;

      if (isOperand(current.kind) && isOperand(proximo.kind)) {
          if (proximo.next != null && proximo.next.kind == ATRIB) {
              return false;
          }
          return true;
      }
      return false;
  }

  public static boolean isMissingIdentifier(ParseException e) {
      Token current = e.currentToken;
      if (current == null) return false;
      Token proximo = current.next;
      if (proximo == null) return false;

      if (current.kind == T_BRABO || current.kind == T_REAL || current.kind == T_FOFOCA || current.kind == VIRGULA) {
          if (proximo.kind == ATRIB || proximo.kind == PONTO_VIRGULA || proximo.kind == VIRGULA) {
              return true;
          }
      }

      if (current.kind == PONTO_VIRGULA && proximo.kind == ATRIB) {
          return true;
      }

      boolean expectedOnlyID = false;
      if (e.expectedTokenSequences != null && e.expectedTokenSequences.length > 0) {
          boolean allSequencesAreID = true;
          for (int i = 0; i < e.expectedTokenSequences.length; i++) {
              if (e.expectedTokenSequences[i].length > 0) {
                  int expectedKind = e.expectedTokenSequences[i][0];
                  if (expectedKind != ID) {
                      allSequencesAreID = false;
                      break;
                  }
              } else {
                  allSequencesAreID = false;
                  break;
              }
          }
          if (allSequencesAreID) {
              expectedOnlyID = true;
          }
      }

      if (expectedOnlyID && proximo.kind != ID) {
          return true;
      }

      return false;
  }

  public static boolean isMissingSemicolon(ParseException e) {
      Token current = e.currentToken;
      if (current == null) return false;
      Token proximo = current.next;
      if (proximo == null) return false;

      boolean expectedSemicolon = false;
      if (e.expectedTokenSequences != null) {
          for (int i = 0; i < e.expectedTokenSequences.length; i++) {
              for (int j = 0; j < e.expectedTokenSequences[i].length; j++) {
                  if (e.expectedTokenSequences[i][j] == PONTO_VIRGULA) {
                      expectedSemicolon = true;
                      break;
                  }
              }
              if (expectedSemicolon) break;
          }
      }

      if (expectedSemicolon) {
          if (proximo.kind == T_BRABO || proximo.kind == T_REAL || proximo.kind == T_FOFOCA ||
              proximo.kind == T_SE || proximo.kind == T_ENQUANTO || proximo.kind == T_PARA ||
              proximo.kind == T_F || proximo.kind == FECHA_CHAVES ||
              (proximo.kind == ID && proximo.next != null && proximo.next.kind == ATRIB)) {
              return true;
          }
      }
      return false;
  }

  public static void registrarErro(ParseException e) {
      Token proximo = e.currentToken.next;
      String msg = "";
      if (proximo.kind == INVALID) {
          msg = "Erro L\u00e9xico na Linha " + proximo.beginLine + ", Coluna " + proximo.beginColumn + ": caractere inv\u00e1lido '" + proximo.image + "'";
      } else if (isMissingOperator(e)) {
          msg = "Erro Sint\u00e1tico na Linha " + proximo.beginLine + ", Coluna " + proximo.beginColumn + ": Aus\u00eancia de operador (como '<', '>', '=', etc.) entre '" + e.currentToken.image + "' e '" + proximo.image + "'";
      } else if (isMissingIdentifier(e)) {
          msg = "Erro Sint\u00e1tico na Linha " + proximo.beginLine + ", Coluna " + proximo.beginColumn + ": Aus\u00eancia de identificador (nome de vari\u00e1vel esperado, mas foi encontrado '" + proximo.image + "')";
      } else if (isMissingSemicolon(e)) {
          msg = "Erro Sint\u00e1tico na Linha " + e.currentToken.beginLine + ", Coluna " + (e.currentToken.endColumn + 1) + ": Aus\u00eancia de ';' ao final do comando (encontrado '" + proximo.image + "')";
      } else {
          msg = "Erro Sint\u00e1tico na Linha " + proximo.beginLine + ", Coluna " + proximo.beginColumn + ": Encontrado '" + proximo.image + "'. Esperava-se: ";
          Set<String> esperados = new HashSet<String>();
          if (e.expectedTokenSequences != null) {
              for (int i = 0; i < e.expectedTokenSequences.length; i++) {
                  for (int j = 0; j < e.expectedTokenSequences[i].length; j++) {
                      esperados.add(e.tokenImage[e.expectedTokenSequences[i][j]]);
                  }
              }
          }
          msg += String.join(", ", esperados);
      }
      listaErros.add(msg);
      listaLinhasErros.add(proximo.beginLine);
  }

  public static void recuperarErro() {
      Token t;
      while (true) {
          t = getToken(1);
          if (t.kind == EOF) {
              break;
          }
          if (t.kind == PONTO_VIRGULA) {
              getNextToken(); // consome ponto e vírgula
              break;
          }
          if (t.kind == FECHA_CHAVES) {
              // não consome fecha chaves para que o escopo externo trate
              break;
          }
          getNextToken(); // consome outros tokens
      }
  }

  public static void recuperarErroPara() {
      Token t;
      while (true) {
          t = getToken(1);
          if (t.kind == EOF) {
              break;
          }
          if (t.kind == ABRE_CHAVES) {
              break; // não consome, o parser consome depois
          }
          if (t.kind == FECHA_CHAVES) {
              break; // não consome
          }
          getNextToken();
      }
  }

  public static void main(String args [])
  {
    if (args.length == 0) {
        // Modo GUI
        javax.swing.SwingUtilities.invokeLater(new Runnable() {
            public void run() {
                new CompilerGUI().setVisible(true);
            }
        });
    } else {
        // Modo CLI (Compatibilidade original)
        gramaticameme parser = new gramaticameme(System.in);
        System.out.println("======================================");
        System.out.println("Bem-vindo ao compilador CompilaMeme");
        System.out.println("Digite o seu c\u00f3digo abaixo. Para encerrar e compilar no terminal,");
        System.out.println("pressione CTRL+Z seguido de Enter");
        System.out.println("======================================\n");

        try
        {
          gramaticameme.Programa();
          if (listaErros.isEmpty()) {
              System.out.println("\n\u2705 Top! C\u00f3digo compilado sem nenhum erro sint\u00e1tico ou l\u00e9xico.");
          } else {
              System.out.println("\n\u274c Vixe, deu red! Erros encontrados durante a compila\u00e7\u00e3o:");
              for (String err : listaErros) {
                  System.out.println("-> " + err);
              }
          }
        }
        catch (ParseException e)
        {
          System.out.println("\n\u274c Vixe, deu red! Erro Sint\u00e1tico encontrado:");
          Token t = e.currentToken;
          Token proximo = t.next;

          System.out.println("-> O erro estourou na linha " + proximo.beginLine + ", coluna " + proximo.beginColumn + ".");
          System.out.println("-> O token que quebrou tudo foi: '" + proximo.image + "'");

          if (t.beginLine < proximo.beginLine) {
              System.out.println("-> DICA: O erro pode estar na linha anterior (" + t.beginLine + ")! Ser\u00e1 que voc\u00ea n\u00e3o esqueceu um ponto e v\u00edrgula ';' ou algo do tipo l\u00e1?");
          }

          System.out.print("-> Mas na true, o compilador tava esperando receber: ");
          for (int i = 0; i < e.expectedTokenSequences.length; i++) {
            for (int j = 0; j < e.expectedTokenSequences[i].length; j++) {
              System.out.print(e.tokenImage[e.expectedTokenSequences[i][j]] + " ");
            }
          }
          System.out.println("\n\nDa seus pulos a\u00ed e tenta de novo!");
        }
        catch (TokenMgrError e)
        {
          System.out.println("\n\ud83d\udeab Erro L\u00e9xico, bicho!");
          String msg = e.getMessage();
          try {
              Pattern p = Pattern.compile("line (\\d+), column (\\d+).*?\\((\\d+)\\)");
              Matcher m = p.matcher(msg);
              if (m.find()) {
                  String linha = m.group(1);
                  String coluna = m.group(2);
                  int ascii = Integer.parseInt(m.group(3));
                  char caractereConvertido = (char) ascii;

                  System.out.println("-> O bagulho travou na Linha " + linha + ", Coluna " + coluna + ".");
                  System.out.println("-> O caractere intruso \u00e9 esse aqui: [" + caractereConvertido + "] (C\u00f3digo ASCII: " + ascii + ")");
              } else {
                  System.out.println("Voc\u00ea digitou um caractere que n\u00e3o existe nos memes.");
                  System.out.println("Detalhe original: " + msg);
              }
          } catch (Exception ex) {
              System.out.println("Voc\u00ea digitou um caractere que n\u00e3o existe nos memes.");
              System.out.println("Detalhe t\u00e9cnico: " + msg);
          }
          System.out.println("\nLimpa essa sujeira a\u00ed e tenta de novo!");
        }
    }
  }

/* ========================================================= */
/* INÍCIO DA GRAMÁTICA (ANÁLISE SINTÁTICA)                   */
/* ========================================================= */
  static final public 
ASTNode Programa() throws ParseException {ASTNode node = new ASTNode("Programa");
  ASTNode cmd;
  ASTNode rest = null;
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case T_BRABO:
        case T_REAL:
        case T_FOFOCA:
        case T_SE:
        case T_ENQUANTO:
        case T_PARA:
        case T_F:
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        cmd = Comando();
if (cmd != null) node.addChild(cmd);
      }
      jj_consume_token(0);
{if ("" != null) return node;}
    } catch (ParseException e) {
registrarErro(e);
    if (getToken(1).kind != EOF) {
        getNextToken();
    }
    rest = Programa();
    if (rest != null) {
        for (ASTNode child : rest.getChildren()) {
            node.addChild(child);
        }
    }
    {if ("" != null) return node;}
    }
    throw new Error("Missing return statement in function");
}

  static final public ASTNode Comando() throws ParseException {ASTNode node = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case T_BRABO:
      case T_REAL:
      case T_FOFOCA:{
        node = Declaracao();
        break;
        }
      case T_F:
      case ID:{
        node = AtribuicaoOuImpressao();
        break;
        }
      case T_SE:{
        node = Condicional();
        break;
        }
      case T_ENQUANTO:{
        node = LacoEnquanto();
        break;
        }
      case T_PARA:{
        node = LacoPara();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
{if ("" != null) return node;}
    } catch (ParseException e) {
registrarErro(e);
    recuperarErro();
    {if ("" != null) return new ASTNode("Erro Sint\u00e1tico", e.currentToken.next.image, e.currentToken.next.beginLine, e.currentToken.next.beginColumn);}
    }
    throw new Error("Missing return statement in function");
}

  static final public ASTNode Declaracao() throws ParseException {Token tType = null;
  Token tId = null;
  ASTNode node = new ASTNode("Declara\u00e7\u00e3o");
  ASTNode expr = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_BRABO:{
      tType = jj_consume_token(T_BRABO);
      break;
      }
    case T_REAL:{
      tType = jj_consume_token(T_REAL);
      break;
      }
    case T_FOFOCA:{
      tType = jj_consume_token(T_FOFOCA);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
node.addChild(new ASTNode("Tipo", tType.image, tType.beginLine, tType.beginColumn));
    tId = jj_consume_token(ID);
ASTNode decl = new ASTNode("Vari\u00e1vel", tId.image, tId.beginLine, tId.beginColumn);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ATRIB:{
      jj_consume_token(ATRIB);
      expr = Expressao();
decl.addChild(expr);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
node.addChild(decl);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VIRGULA:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      jj_consume_token(VIRGULA);
      tId = jj_consume_token(ID);
decl = new ASTNode("Vari\u00e1vel", tId.image, tId.beginLine, tId.beginColumn);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ATRIB:{
        jj_consume_token(ATRIB);
        expr = Expressao();
decl.addChild(expr);
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        ;
      }
node.addChild(decl);
    }
    jj_consume_token(PONTO_VIRGULA);
{if ("" != null) return node;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode AtribuicaoOuImpressao() throws ParseException {Token tId = null;
  ASTNode node = null;
  ASTNode expr = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      tId = jj_consume_token(ID);
      jj_consume_token(ATRIB);
      expr = Expressao();
      jj_consume_token(PONTO_VIRGULA);
node = new ASTNode("Atribui\u00e7\u00e3o", tId.image, tId.beginLine, tId.beginColumn);
      node.addChild(expr);
      break;
      }
    case T_F:{
      jj_consume_token(T_F);
      jj_consume_token(ABRE_PAR);
      expr = Expressao();
      jj_consume_token(FECHA_PAR);
      jj_consume_token(PONTO_VIRGULA);
node = new ASTNode("Impress\u00e3o (F)");
      node.addChild(expr);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return node;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode Condicional() throws ParseException {ASTNode node = new ASTNode("Condicional (tem_certeza?)");
  ASTNode expr = null;
  ASTNode cmd = null;
  ASTNode blockTrue = new ASTNode("Ent\u00e3o");
  ASTNode blockFalse = new ASTNode("Sen\u00e3o");
    try {
      jj_consume_token(T_SE);
      jj_consume_token(ABRE_PAR);
      expr = Expressao();
      jj_consume_token(FECHA_PAR);
ASTNode condNode = new ASTNode("Condi\u00e7\u00e3o");
      condNode.addChild(expr);
      node.addChild(condNode);
    } catch (ParseException e) {
registrarErro(e);
      recuperarErroPara();
    }
    jj_consume_token(ABRE_CHAVES);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case T_BRABO:
      case T_REAL:
      case T_FOFOCA:
      case T_SE:
      case T_ENQUANTO:
      case T_PARA:
      case T_F:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      cmd = Comando();
if (cmd != null) blockTrue.addChild(cmd);
    }
    jj_consume_token(FECHA_CHAVES);
node.addChild(blockTrue);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_SENAO:{
      jj_consume_token(T_SENAO);
      jj_consume_token(ABRE_CHAVES);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case T_BRABO:
        case T_REAL:
        case T_FOFOCA:
        case T_SE:
        case T_ENQUANTO:
        case T_PARA:
        case T_F:
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_4;
        }
        cmd = Comando();
if (cmd != null) blockFalse.addChild(cmd);
      }
      jj_consume_token(FECHA_CHAVES);
node.addChild(blockFalse);
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
{if ("" != null) return node;}
    throw new Error("Missing return statement in function");
}

  static final public ASTNode LacoEnquanto() throws ParseException {ASTNode node = new ASTNode("La\u00e7o Enquanto (segue_o_baile)");
  ASTNode expr = null;
  ASTNode cmd = null;
  ASTNode body = new ASTNode("Corpo");
    try {
      jj_consume_token(T_ENQUANTO);
      jj_consume_token(ABRE_PAR);
      expr = Expressao();
      jj_consume_token(FECHA_PAR);
ASTNode cond = new ASTNode("Condi\u00e7\u00e3o");
      cond.addChild(expr);
      node.addChild(cond);
    } catch (ParseException e) {
registrarErro(e);
      recuperarErroPara();
    }
    jj_consume_token(ABRE_CHAVES);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case T_BRABO:
      case T_REAL:
      case T_FOFOCA:
      case T_SE:
      case T_ENQUANTO:
      case T_PARA:
      case T_F:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_5;
      }
      cmd = Comando();
if (cmd != null) body.addChild(cmd);
    }
    jj_consume_token(FECHA_CHAVES);
node.addChild(body);
    {if ("" != null) return node;}
    throw new Error("Missing return statement in function");
}
